Collections.emptyList -> List.of